# k-line-predict-mini

./: .gitignore  README.md  data_fetcher.py  database.py  install.bat  install.sh  main.py  predictor.py  pyproject.toml  requirements.txt  setup.py
data/: AAPL_US.csv
